sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:6: error: not found: value estRayonCrepe
    while (estRayonCrepe(i)==a){
           ^