sort.pancake.BasicPancake.scala.code
def solve() {
  var a = getTaillePile()-1
  while (!estTriee()){
    var i = 0
    while (estRayonCrepe(i)==a){
      i += 1
    }
    retourne(i)
    a -= 1
  }
}